--- a/src/mahjong-app.html
+++ b/src/mahjong-app.html
@@ -29,10 +29,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       :host {
         --app-primary-color: #4285f4;
         --app-secondary-color: black;
-
         display: block;
       }
-
       app-header {
         color: #fff;
         background-color: var(--app-primary-color);
@@ -40,27 +38,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app-header paper-icon-button {
         --paper-icon-button-ink-color: white;
       }
-
       .drawer-list {
         margin: 0 20px;
       }
-
       .drawer-list a {
         display: block;
-
         padding: 0 16px;
-
         text-decoration: none;
-
         color: var(--app-secondary-color);
-
         line-height: 40px;
       }
-
       .drawer-list a.iron-selected {
         color: black;
-
         font-weight: bold;
+      }
+      .drawer-list paper-item {
+        display: block;
+        padding: 0 16px;
+        text-decoration: none;
+        color: var(--app-secondary-color);
+        line-height: 40px;
       }
     </style>
 
@@ -74,7 +71,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <app-drawer-layout fullbleed>
       <!-- Drawer content -->
       <app-drawer>
-        <app-toolbar>Menu</app-toolbar>
+        <app-toolbar></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="play" href="/play">Play</a>
           <a name="prefs" href="/prefs">Prefs</a>
@@ -82,6 +79,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="layouts" href="/layouts">Layouts</a>
           <a name="scores" href="/scores">Scores</a>
         </iron-selector>
+	<paper-menu class="drawer-list">
+	  <paper-item name="New_Game">New Game</paper-item>
+	  <paper-item name="Restart_Game">Restart Game</paper-item>
+	  <paper-item name="Undo_Move">Undo Move</paper-item>
+	  <paper-item name="Redo_Move">Redo Move</paper-item>
+	</paper-menu>
       </app-drawer>
 
       <!-- Main content -->
