--- a/src/mahjong-app.html
+++ b/src/mahjong-app.html
@@ -75,10 +75,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-toolbar></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="play" href="/play">Play</a>
+	<!--
           <a name="prefs" href="/prefs">Prefs</a>
           <a name="tiles" href="/tiles">Tiles</a>
           <a name="layouts" href="/layouts">Layouts</a>
           <a name="scores" href="/scores">Scores</a>
+	-->
         </iron-selector>
 	<div class="drawer-list">
 	  <paper-button id="new_game">New Game</paper-button>
@@ -104,10 +106,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             fallback-selection="view404"
             role="main">
           <mahjong-play id="play" name="play"></mahjong-play>
+	  <!--
           <mahjong-prefs name="prefs"></mahjong-prefs>
           <mahjong-tiles name="tiles"></mahjong-tiles>
 	  <mahjong-layouts name="layouts"></mahjong-layouts>
 	  <mahjong-scores name="scores"></mahjong-scores>
+	  -->
           <mahjong-view404 name="view404"></mahjong-view404>
         </iron-pages>
       </app-header-layout>
@@ -145,7 +149,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
       ready: function() {
         let game = this
-        console.log("this.$.new_game = " + this.$.new_game)
+        // console.log("this.$.new_game = " + this.$.new_game)
         this.$.new_game.onclick = function() { game.$.play.game.new_game() }
         this.$.restart_game.onclick = function() { game.$.play.game.restart_game() }
         this.$.undo_move.onclick = function() { game.$.play.game.undo() }
