Eliminated -app and -view404.

--- a/src/mahjong-play.html
+++ b/src/mahjong-play.html
@@ -9,7 +9,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+
 <link rel="import" href="shared-styles.html">
+<link rel="import" href="mahjong-icons.html">
 
 <link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -21,6 +23,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style include="shared-styles">
       :host {
+        --app-primary-color: #4285f4;
+        --app-secondary-color: black;
 	display: block;
 	padding: 10px;
 	html, body { margin:0; padding:0; overflow:hidden; }
