--- a/src/mahjong-play.html
+++ b/src/mahjong-play.html
@@ -35,7 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         position:relative; top:0px; left:0px; width:100%; height:100%;
       }
       paper-menu-button {
-        position:absolute; top:0px; left:0px;
+        position:absolute; top:2px; left:2px;
       }
       paper-menu-button paper-icon-button {
         color:white;
@@ -470,7 +470,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	  or start a new game.</p>
 	<div class="buttons">
 	  <paper-button raised dialog-confirm on-click="dialog_undo">Undo</paper-button>
-	  <paper-button raised dialog-confirm autofocus on-click="dialog_restart">Restart</paper-button>
+	  <paper-button raised dialog-confirm on-click="dialog_restart">Restart</paper-button>
 	  <paper-button raised dialog-confirm on-click="dialog_new">New Game</paper-button>
 	</div>
       </paper-dialog>
@@ -480,7 +480,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	<div class="buttons">
 	  <paper-button raised dialog-confirm on-click="dialog_undo">Undo</paper-button>
 	  <paper-button raised dialog-confirm on-click="dialog_restart">Restart</paper-button>
-	  <paper-button raised dialog-confirm autofocus on-click="dialog_new">New Game</paper-button>
+	  <paper-button raised dialog-confirm on-click="dialog_new">New Game</paper-button>
 	</div>
       </paper-dialog>
 
