--- a/src/mahjong-play.html
+++ b/src/mahjong-play.html
@@ -237,14 +237,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	  </g>
 	  <!-- coins -->
 	  <g id="one-coin">
-	    <path stroke="#10106C" stroke-width=".75" d="m49.4 40.5c0 7.7-6.2 13.9-13.9 13.9s-13.9-6.2-13.9-13.9 6.2-13.9 13.9-13.9 13.9 6.2 13.9 13.9z" fill="none"/>
+	    <path stroke="#10106C" stroke-width=".75" fill="none"
+		  d="m49.4 40.5c0 7.7-6.2 13.9-13.9 13.9s-13.9-6.2-13.9-13.9 6.2-13.9 13.9-13.9 13.9 6.2 13.9 13.9z"/>
 	    <circle r="6.5" cy="40.5" stroke="#10106C" cx="42" stroke-width="1.6" fill="none"/>
 	    <circle r="6.5" cy="40.5" stroke="#10106C" cx="29" stroke-width="1.6" fill="none"/>
 	    <circle r="6.5" cy="34" stroke="#10106C" cx="35.5" stroke-width="1.6" fill="none"/>
 	    <circle r="6.5" cy="47" stroke="#10106C" cx="35.5" stroke-width="1.6" fill="none"/>
-	    <path stroke="#10106C" stroke-width=".75" d="m44.8 40.5c0 5.1-4.2 9.3-9.3 9.3s-9.3-4.2-9.3-9.3c0-5.1 4.2-9.3 9.3-9.3s9.3 4.2 9.3 9.3z" fill="none"/>
-	    <path stroke="#BA0000" stroke-width="2" d="m52.2 40.5c0 9.2-7.5 16.7-16.7 16.7s-16.7-7.5-16.7-16.7 7.5-16.7 16.7-16.7 16.7 7.5 16.7 16.7z" fill="none"/>
-	    <path stroke="#10106C" stroke-width=".75" d="m55 40.5c0 10.8-8.7 19.5-19.5 19.5s-19.5-8.7-19.5-19.5 8.7-19.5 19.5-19.5 19.5 8.7 19.5 19.5z" fill="none"/>
+	    <path stroke="#10106C" stroke-width=".75" fill="none"
+		  d="m44.8 40.5c0 5.1-4.2 9.3-9.3 9.3s-9.3-4.2-9.3-9.3c0-5.1 4.2-9.3 9.3-9.3s9.3 4.2 9.3 9.3z"/>
+	    <path stroke="#BA0000" stroke-width="2" fill="none"
+		  d="m52.2 40.5c0 9.2-7.5 16.7-16.7 16.7s-16.7-7.5-16.7-16.7 7.5-16.7 16.7-16.7 16.7 7.5 16.7 16.7z"/>
+	    <path stroke="#10106C" stroke-width=".75" fill="none"
+		  d="m55 40.5c0 10.8-8.7 19.5-19.5 19.5s-19.5-8.7-19.5-19.5 8.7-19.5 19.5-19.5 19.5 8.7 19.5 19.5z"/>
 	  </g>
 	  <g id="two-coins">
 	    <use xlink:href="#coin" stroke="#10106C" transform="translate(24.5 16.5) scale(1.22)"/>
@@ -442,23 +446,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	    <use xlink:href="#bamboo" stroke="#006C00" transform="translate(43.5 50.5) scale(.73 .66)"/>
 	  </g>
 	  <!-- season tile -->
-	  <g id="season">
-	    <use y="6" x="13" xlink:href="#season-image"/>
-	  </g>
+	  <g id="season"><use y="6" x="13" xlink:href="#season-image"/></g>
 	  <!-- flower tile -->
-	  <g id="flower">
-	    <use y="6" x="13" xlink:href="#flower-image"/>
-	  </g>
+	  <g id="flower"><use y="6" x="13" xlink:href="#flower-image"/></g>
 	</defs>
       </svg>
 
       <paper-menu-button id="menubutton">
 	<paper-icon-button icon="menu" class="dropdown-trigger"></paper-icon-button>
 	<paper-menu class="dropdown-content">
-	  <paper-item id="new_game" on-click="menu_new" disabled>New</paper-item>
-	  <paper-item id="restart_game" on-click="menu_restart" disabled>Restart</paper-item>
-	  <paper-item id="undo_move" on-click="menu_undo" disabled>Undo</paper-item>
-	  <paper-item id="redo_move" on-click="menu_redo" disabled>Redo</paper-item>
+	  <paper-item id="new_game" on-tap="menu_new" disabled>New</paper-item>
+	  <paper-item id="restart_game" on-tap="menu_restart" disabled>Restart</paper-item>
+	  <paper-item id="undo_move" on-tap="menu_undo" disabled>Undo</paper-item>
+	  <paper-item id="redo_move" on-tap="menu_redo" disabled>Redo</paper-item>
 	</paper-menu>
       </paper-menu-button>
 
@@ -469,18 +469,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	  start the game over,
 	  or start a new game.</p>
 	<div class="buttons">
-	  <paper-button raised dialog-confirm on-click="dialog_undo">Undo</paper-button>
-	  <paper-button raised dialog-confirm on-click="dialog_restart">Restart</paper-button>
-	  <paper-button raised dialog-confirm on-click="dialog_new">New Game</paper-button>
+	  <paper-button raised dialog-confirm on-tap="dialog_undo">Undo</paper-button>
+	  <paper-button raised dialog-confirm on-tap="dialog_restart">Restart</paper-button>
+	  <paper-button raised dialog-confirm on-tap="dialog_new">New Game</paper-button>
 	</div>
       </paper-dialog>
       
       <paper-dialog id="youwin" modal>
 	<h2>You have won the game</h2>
 	<div class="buttons">
-	  <paper-button raised dialog-confirm on-click="dialog_undo">Undo</paper-button>
-	  <paper-button raised dialog-confirm on-click="dialog_restart">Restart</paper-button>
-	  <paper-button raised dialog-confirm on-click="dialog_new">New Game</paper-button>
+	  <paper-button raised dialog-confirm on-tap="dialog_undo">Undo</paper-button>
+	  <paper-button raised dialog-confirm on-tap="dialog_restart">Restart</paper-button>
+	  <paper-button raised dialog-confirm on-tap="dialog_new">New Game</paper-button>
 	</div>
       </paper-dialog>
 
