--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
-    <mahjong-play></mahjong-play>
+    <mahjong-play>
+    </mahjong-play>
   </body>
 </html>
