--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
-    <link rel="import" href="/src/mahjong-play.html">
+    <link rel="import" href="src/mahjong-app.html">
 
     <style>
       body {
@@ -105,7 +105,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
-    <mahjong-play>
-    </mahjong-play>
+    <mahjong-app></mahjong-app>
   </body>
 </html>
