This didn't work very well, gets very complicated importing svg.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         min-height: 100vh;
         background-color: #eeeeee;
       }
+      html, body, mahjong-app { height: 100%; }
     </style>
   </head>
   <body>
