Implemented location.hash game seeding, suitable for bookmarking and sharing.

--- a/src/mahjong-app.html
+++ b/src/mahjong-app.html
@@ -66,15 +66,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _pathChanged: function(path) {
-	console.log("_pathChanged: "+path)
+	// console.log("_pathChanged: "+path)
       },
     
       _routeChanged: function(route) {
-	console.log("_routeChanged: "+route.path)
+	// console.log("_routeChanged: "+route.path)
       },
 
       _routePageChanged: function(page) {
-        console.log("_routePageChanged: "+page)
+        // console.log("_routePageChanged: "+page)
 	this.page = 'play';
       },
 
