Fixed the oversize margin and padding on tile button.

--- a/src/mahjong-play.html
+++ b/src/mahjong-play.html
@@ -40,6 +40,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: white;
         --paper-icon-button-ink-color: white;
       }
+      #mahjong paper-button {
+         margin: 0 0;
+         padding: 0 0;
+      }
       .definitions {
 	display:none; 
       }
