--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
     <title>Mahjong</title>
     <meta name="description" content="Mahjong Solitaire">
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
-    <link rel="import" href="src/mahjong-app.html">
+    <link rel="import" href="src/mahjong-play.html">
 
     <style>
       body {
@@ -106,6 +106,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
-    <mahjong-app></mahjong-app>
+    <mahjong-play></mahjong-play>
   </body>
 </html>
