--- a/src/mahjong-play.html
+++ b/src/mahjong-play.html
@@ -10,9 +10,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<link rel="import" href="shared-styles.html">
-<link rel="import" href="mahjong-icons.html">
-
 <link rel="import" href="../bower_components/iron-a11y-keys-behavior/iron-a11y-keys-behavior.html">
 <link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -21,9 +18,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
+<link rel="import" href="mahjong-icons.html">
+
 <dom-module id="mahjong-play">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         --app-primary-color: #4285f4;
         --app-secondary-color: black;
