Added noscript message for non-cooperating websites.

--- a/index.html
+++ b/index.html
@@ -107,5 +107,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </head>
   <body>
     <mahjong-play></mahjong-play>
+    <noscript>
+      Please enable JavaScript to view this website.
+    </noscript>
   </body>
 </html>
