Added titles to icon buttons.

--- a/src/mahjong-play.html
+++ b/src/mahjong-play.html
@@ -544,10 +544,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     
     <div id="mahjong"></div>
     <div id="toolbar-menu">
-      <paper-icon-button id="new_game" icon="skip-next" on-tap="action_new" disabled></paper-icon-button>
-      <paper-icon-button id="restart_game" icon="skip-previous" on-tap="action_restart" disabled></paper-icon-button>
-      <paper-icon-button id="undo_move" icon="undo" on-tap="action_undo" disabled></paper-icon-button>
-      <paper-icon-button id="redo_move" icon="redo" on-tap="action_redo" disabled></paper-icon-button>
+      <paper-icon-button id="new_game" icon="skip-next" on-tap="action_new" title="New Game" disabled></paper-icon-button>
+      <paper-icon-button id="restart_game" icon="skip-previous" on-tap="action_restart" title="Restart Game" disabled></paper-icon-button>
+      <paper-icon-button id="undo_move" icon="undo" on-tap="action_undo" title="Undo Move" disabled></paper-icon-button>
+      <paper-icon-button id="redo_move" icon="redo" on-tap="action_redo" title="Redo Move" disabled></paper-icon-button>
     </div>
     <paper-dialog id="youlose" modal>
       <h2>There are no more moves.</h2>
